2010-01-06  Neal Walfield  <neal@gnu.org>

	* src/starling.c [HAVE_HILDON && HAVE_HILDON_VERSION >= 202]:
	Include <hildon/hildon-defines.h>.
	(playlist_alpha_seek_build): Set the alpha bar's width to
	HILDON_ICON_PIXEL_SIZE_FINGER.

2010-01-06  Neal Walfield  <neal@gnu.org>

	* src/main.c (main) [HAVE_HILDON && HAVE_HILDON_VERSION >= 202]:
	Call hildon_init.

2010-01-06  Neal Walfield  <neal@gnu.org>

	* src/starling.c (menu_item_add): Add parameter menu to avoid
	menu_item_add being implemented as a nested function, which is
	compiled incorrectly using Nokia's Maemo 5 SDK:
	Cf. https://bugs.maemo.org/show_bug.cgi?id=7699.  Update users.
	(menu_separator): Likewise.

2010-01-06  Neal Walfield  <neal@gnu.org>

	* src/starling.c (window_x): Change return type to a gboolean.
	Return TRUE.

2010-01-06  Neal Walfield  <neal@gnu.org>

	* src/starling.c [HAVE_HILDON && HAVE_HILDON_VERSION > 0]: Include
	<hildon/hildon-button.h> and <hildon/hildon-check-button.h>.
	(menu_item_add) [HAVE_HILDON_APP_MENU]: If CHECK_MENU_ITEM is
	true, create a HildonCheckButton, not a GtkToggleButton.  If this
	is not the case, create a HildonButton, not a GtkButton.  Update
	users.  Filter TEXT to exclude any mnemonic.

2010-01-05  Neal Walfield  <neal@gnu.org>

	House cleaning.
	* src/caption.c (build): If we haven't allocated anything yet,
	return the base of CAPTION->POOL.
	* src/lyrics.c: Don't include <sqlite.h>.  Include "sqlite.h"
	instead.
	* src/lastfm.c: Include <stdlib.h>.  Don't include <sqlite.h>.
	Include "sqlite.h" instead.
	(lastfm_submit_real_helper): Remove unused prototype.
	* src/musicdb.h (music_db_play_lists_for_each): Improve comment.
	* src/musicdb.c: Don't include <sqlite.h>.  Include "sqlite.h"
	instead.
	(music_db_open): On creating the database, add the user's home
	directory.
	[HAVE_MAEMO]: Add /media.
	* src/player.h (player_set_volume): Change return type to void.
	* src/player.c: Include <stdio.h>.
	(player_set_sink): Add debugging output.